feat(url): completed /childAlert?address=<address> & /phoneAlert?firestation=<firestation_number>